--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
                                     </div>
                             </div>
                             <div class="home-progect">
-                                <a href="./rep/index.html"><img src="./img/home-1.jpg" alt="repair-disign-project"></a>
+                                <a href="./rep1/index.html"><img src="./img/home-1.jpg" alt="repair-disign-project"></a>
                             </div>
                         </div>
                     </li>
@@ -130,7 +130,7 @@
                     </li>
                     <li class="swiper">
                         <div id="image-repair">
-                            <a href="./rep/rep2/index2.html"><img src="./img/home-1.jpg" alt="repair-disign-project"></a>
+                            <a href="./rep1/rep2/index2.html"><img src="./img/home-1.jpg" alt="repair-disign-project"></a>
                         </div>
                     </li>
                 </ul>
