--- a/cv.html
+++ b/cv.html
@@ -88,7 +88,7 @@
                                     </div>
                             </div>
                             <div class="home-progect">
-                                <a href="./rep/index.html"><img src="./img/home-1.jpg" alt="repair-disign-project"></a>
+                                <a href="./rep1/index.html"><img src="./img/home-1.jpg" alt="repair-disign-project"></a>
                             </div>
                         </div>
                     </li>
